# enpassant

./: 404.html  Cargo.toml  README.md  credits.html  further.html  index.html  introductions.html  print.html  searchindex.js  searchindex.json  setup.html  termsandnotation.html
.github/workflows/: deploy.yml
boardrepr/: boardrepr.html
boardrepr/keepingtrack/: bitsandpieces.html  keepingtrack.html  squaringaway.html
book/: book.toml
book/src/: SUMMARY.md  introductions.md  setup.md  termsandnotation.md
book/src/boardrepr/: boardrepr.md  keeptrackpieces.md  keeptrackpieces1.md
book/src/boardrepr/keepingtrack/: bitsandpieces.md  keepingtrack.md  squaringaway.md
src/: bits.rs  lib.rs  main.rs
src/board/: bits.rs  castling.rs  mailbox.rs  mod.rs
