[package]
name = "enpassant"
version = "0.1.0"
edition = "2021"
homepage = "https://mattngaw.com/enpassant/"
description = "An educational chess library written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattngaw/enpassant"
readme = "README.md"
include = [
    "src/*",
    "Cargo.toml",
    "README.md",
]

[[bin]]
name = "enpassant"
path = "src/main.rs"

[lib]
name = "enpassant"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
